Added a .md file

--- a/templates/listing.html
+++ b/templates/listing.html
@@ -7,7 +7,7 @@
   <body>
     <div class="listing">
       {% for entity in entitys%}
-        <p>{{ entity }}</p><br>
+        <p>ENTITY-{{ entity["id"] }}</p><br>
       {% endfor %}
     </div>
   </body>
