--- a/templates/listing.html
+++ b/templates/listing.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="{{ url_for('static', filename='templates/work.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='templates/list.css') }}">
 
     <title>U.E.R.L Entities Listing</title>
   </head>
