CSS with HTML attached

--- a/templates/listing.html
+++ b/templates/listing.html
@@ -14,6 +14,7 @@
         {% endif %}
         {% if entity['classified'] == True %}
           <b><p class="classified">ENTITY-{{ entity["id"] }} [CLASSIFIED]</p></b>
+        {% endif %}
       {% endfor %}
     </div>
   </body>
