--- a/templates/listing.html
+++ b/templates/listing.html
@@ -8,14 +8,15 @@
   <body>
     <div class="listing">
       {% for entity in entitys%}
+        <br>
         <div class="entity" >
           {% if entity['classified'] == False %}
-            <a class="public" herf="/entities/{{ entity['id'] }}">ENTITY-{{ entity["id"] }}</a></b>
+            <a class="public" herf="/entities/{{ entity['id'] }}">ENTITY-{{ entity["id"] }}</a>
           {% else %}
-              <a class="classified" herf="/entities/{{ entity['id'] }}">ENTITY-{{ entity["id"] }} [CLASSIFIED]</a></b>
+            <p></p><a class="classified" herf="/entities/{{ entity['id'] }}">ENTITY-{{ entity["id"] }} [CLASSIFIED]</a></p>
           {% endif %}
       {% endfor %}
-        </div>
+      </div>
     </div>
   </body>
   <noscript class="no-js">Javascript is Disabled!</noscript>
