--- a/templates/ent.html
+++ b/templates/ent.html
@@ -5,7 +5,7 @@
   <title>U.E.R.L Homepage</title>
   <style>
     html { 
-  background: url({{ url_for('static', filename='img/public.png') }}) no-repeat center center fixed; 
+  /*background: url({{ url_for('static', filename='img/public.png') }}) no-repeat center center fixed; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -13,7 +13,7 @@
 }
 </style>
 </head>
-<body>
-  <h1>Welcome <span style="color: blue;">{{username}}</span>!</h1>
-</body>
+  <body>
+   <h1>Welcome <span style="color: blue;">{{username}}</span>!</h1>
+  </body>
 </html>
