--- a/templates/listing.html
+++ b/templates/listing.html
@@ -9,13 +9,7 @@
     <div class="listing">
       {% for entity in entitys%}
         <div class="entity" >
-          {% if entity['classified'] == False %}
-            <p><a class="public" href="/entities/{{ entity['id'] }}">ENTITY-{{ entity["id"] }}</a></p>
-          {% else %}
-            <p><a class="classified" href="/entities/{{ entity['id'] }}">ENTITY-{{ entity["id"] }} [CLASSIFIED]</a></p>
-          {% endif %}
-      {% endfor %}
-      </div>
+          {% if entity['classified'] == False %}<p><a class="public" href="/entities/{{ entity['id'] }}">ENTITY-{{ entity["id"] }}</a></p>{% else %}<p><a class="classified" href="/entities/{{ entity['id'] }}">ENTITY-{{ entity["id"] }} [CLASSIFIED]</a></p>{% endif %}</div>{% endfor %}
     </div>
     <noscript class="no-js">Javascript is Disabled!</noscript>
   </body>
