fixed and stuff

--- a/templates/ent.html
+++ b/templates/ent.html
@@ -3,17 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>U.E.R.L Homepage</title>
-  <style>
-    html { 
-  /*background: url({{ url_for('static', filename='img/public.png') }}) no-repeat center center fixed; */
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-</style>
+  <link rel="apple-touch-icon" sizes="180x180" href="/ICONS/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/ICONS/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/ICONS/favicon-16x16.png">
+  <link rel="manifest" href="/ICONS/site.webmanifest">
 </head>
   <body>
-   <h1>Welcome <span style="color: blue;">{{username}}</span>!</h1>
+   <h1>Entity-<span style="color: blue;">{{requested}}</span></h1>
   </body>
 </html>
